[package]
name = "flintec_lpp"
version = "0.1.0"
authors = ["Peruz <lucaperuzzo@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
# plotters = {git = "https://github.com/38/plotters.git"}
plotters = "0.3.0"
rayon = "1.5.0"
