[package]
name = "flintec_lpp"
version = "0.1.4"
authors = ["Peruz <lucaperuzzo@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Peruz/flintec_lpp"
description = "CLI apps for logging, processing, and plotting weight time series from Flintec load cells - DAD 141.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
# plotters = {git = "https://github.com/38/plotters.git"}
plotters = "0.3.0"
