[package]
name = "flintec_lpp"
version = "10.0.0"
authors = ["Peruz <lucaperuzzo@outlook.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/Peruz/flintec_lpp"
description = "CLI apps for logging, processing, and plotting load time series from Flintec load cells - DAD 141.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = {git="https://github.com/chronotope/chrono-tz.git"}
clap = "2.33"
plotters = "0.3"
